Added Set color function

--- a/COLOR_FLIPPER/main.html
+++ b/COLOR_FLIPPER/main.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Color Flipper</title>
-        <style>
-            #green{
-                background-color: green;
-            }
-            #red{
-                background-color: red;
-            }
-            #blue{
-                background-color: rgb(0, 174, 255);
-            }
 
-            button{
-                border-radius: 5px;
-                width: 100px;
-                height: 40px;
-                margin: 5px;
-            }
-        </style>
-    </head>
-    <body>
-        <h2>Color Flipper</h2>
-        <button id = "green">Green</button>
-        <button id = "red">Red</button>
-        <button id = "blue">Blue</button>
-        <button id = "random">Random</button>
-        <script src ="index.js"></script>
-    </body>
+<head>
+    <title>Color Flipper</title>
+    <style>
+        #green {
+            background-color: green;
+        }
+
+        #red {
+            background-color: red;
+        }
+
+        #blue {
+            background-color: rgb(0, 174, 255);
+        }
+
+        button {
+            border-radius: 5px;
+            border-color: black;
+            border-width: 2px;
+            width: 100px;
+            height: 40px;
+            margin: 5px;
+        }
+    </style>
+</head>
+
+<body>
+    <h2>Color Flipper</h2>
+    <button id="green" onCLick="setColor('green')">Green</button>
+    <button id="red" onCLick="setColor('red')">Red</button>
+    <button id="blue" onCLick="setColor('rgb(0, 174, 255)')">Blue</button>
+    <button id="random">Random</button>
+    <script src="index.js"></script>
+</body>
+
 </html>
