Added random Color fn

--- a/COLOR_FLIPPER/main.html
+++ b/COLOR_FLIPPER/main.html
@@ -16,7 +16,9 @@
             background-color: rgb(0, 174, 255);
         }
 
+
         button {
+            font-weight: 700;
             border-radius: 5px;
             border-color: black;
             border-width: 2px;
@@ -32,7 +34,7 @@
     <button id="green" onCLick="setColor('green')">Green</button>
     <button id="red" onCLick="setColor('red')">Red</button>
     <button id="blue" onCLick="setColor('rgb(0, 174, 255)')">Blue</button>
-    <button id="random">Random</button>
+    <button onClick="randomColor()">Random</button>
     <script src="index.js"></script>
 </body>
 
